SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/Cloud_Service_Provider_Contract__c.object
<CustomObject>
    <description>Capture details on the Cloud Service Provider Contracts used to procure cloud resources.</description>
    <fields>
        <fullName>Awardee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The awardee of the cloud service provider contract.</description>
        <label>Awardee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Service Provider Contracts</relationshipLabel>
        <relationshipName>Cloud_Service_Provider_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>The end date of the cloud service provider contract.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>The start date of the cloud service provider contractor.</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <label>Cloud Service Provider Contract</label>
    <nameField>
        <label>CSP Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Service Provider Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>